<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Tutorial" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="63dp" >

        <Button
            android:id="@+id/backButton"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:text="back" />

        <Button
            android:id="@+id/forwardButton"
            android:layout_width="100dp"
            android:layout_alignParentRight="true"
            android:layout_height="fill_parent"
            android:text="forward" />
    </RelativeLayout>
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/upgradeshot"
        android:drawablePadding="5dp"
        android:text="@string/shot_upgrade" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/upgraderocket"
        android:drawablePadding="5dp"
        android:text="@string/rocket_upgrade" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/upgradeshield"
        android:drawablePadding="5dp"
        android:text="@string/shield_upgrade" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/upgradebomb"
        android:drawablePadding="5dp"
        android:text="@string/bomb_upgrade" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/upgradelife"
        android:drawablePadding="5dp"
        android:text="@string/life_upgrade" />
    

        
    
        
   


</LinearLayout>