<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Tutorial2" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="63dp" >

        <Button
            android:id="@+id/backButton"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:text="back" />

        <Button
            android:id="@+id/forwardButton"
            android:layout_width="100dp"
            android:layout_alignParentRight="true"
            android:layout_height="fill_parent"
            android:text="forward" />
    </RelativeLayout>
    
    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/enemyship"
        android:drawablePadding="5dp"
        android:text="@string/normal_enemy" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/midship"
        android:drawablePadding="5dp"
        android:text="@string/mid_enemy" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/bossship"
        android:drawablePadding="5dp"
        android:text="@string/boss_enemy" />

</LinearLayout>
